--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -198,7 +198,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-3 mb-md-0">
-                                    <button  class="mr-1 shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
+                                    <button (click)="PDFtransfer()"  class="mr-1 shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
                                     <button class="whatsapp ms-4 me-4"><i class="fa-brands fa-whatsapp" ></i></button>
                                     <button class="email"><i class="fa-solid fa-envelope"></i></button>
                                 </div>
