--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -37,7 +37,7 @@
                                   </div>
                                   <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>System CN No.</mat-label>
+                                        <mat-label>System Debit No.</mat-label>
                                         <input matInput name="SystemCn " [(ngModel)]="selectedPurchaseMaster.SystemCn"
                                         required   (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
