--- a/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -130,20 +130,25 @@
                                         </div>
                                     </div>
                                     <!--  spec end -->
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary">
                                              Search
                                         </button>
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
+                                        <button class=" ms-3" mat-raised-button color="primary"  printTitle="ProductTransfer"  [useExistingCss]="true" printSectionId="ProductT" ngxPrint >
+                                            <i  class="far fa-file-pdf "
+                                            style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
+                                        </button>
+                                        
                                     </div>
                                 </div>
                             </form>
                             <!-- TransfermasterList list -->
                             <div class="body p-2">
-                                <div class="col-sm-12" style="overflow: auto; height: 450px;">
-                                    <table class="table table-striped table-hover table-sm table-bordered"
+                                <div id="ProductT" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                    <table  class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;" id="ProductTransferExcel">
                                         <thead>
                                             <tr style="white-space: nowrap;">
@@ -161,9 +166,7 @@
                                                 <td>
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
-                                                    <button [useExistingCss]="true" printSectionId="ProductTransferExcel" ngxPrint ><i  class="far fa-file-pdf ms-4"
-                                                        style="color: #2433be;font-size: 22px;cursor: pointer;"> </i>
-                                                    </button>
+                                                   
                                                 </td>
                                                 <td></td>
                                                 <td></td>
