--- a/web/src/app/inventory/purchase/purchase.component.css
+++ b/web/src/app/inventory/purchase/purchase.component.css
@@ -1,9 +1,10 @@
-.deleteClass{
-    color:red !important;
-    text-decoration:line-through !important; 
+.deleteClass {
+    color: red !important;
+    text-decoration: line-through !important;
 }
-.addClass{
-    color:green !important;
+
+.addClass {
+    color: green !important;
 }
 
 .delete_icons {
@@ -45,7 +46,7 @@
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.edit_icon1{
+.edit_icon1 {
     background: #1c1a9c;
     color: #fff;
     padding: 3px;
@@ -55,10 +56,10 @@
     width: 24px !important;
     cursor: pointer;
     transition: 0.5s;
-    box-shadow: 2px 2px 6px #9c9795fa;  
+    box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.restore{
+.restore {
     background: #14a44d;
     border-radius: 24px;
     color: white;
@@ -66,7 +67,7 @@
     font-size: 24px;
 }
 
-.bg_none{
+.bg_none {
     background: none;
     border: none;
     margin: 0;
@@ -84,6 +85,15 @@
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.pdf {
+    background: #3f51b5;
+    color: #fff;
+    border: none;
+    height: 30px;
+    width: 30px;
+    border-radius: 3px
 }
