--- a/server/views/TransferProduct.ejs
+++ b/server/views/TransferProduct.ejs
@@ -38,14 +38,14 @@
                 <thead>
                     <tr>
                         <th>S.No</th>
-                        <th>ITEM</th>
-                        <th>BARCODE</th>
-                        <th>QTY</th>
-                        <th>FROM SHOP </th>
-                        <th>TO SHOP</th>
-                        <th>INITIATION DATE</th>
-                        <th>INITIATION BY</th>
-                        <th>SECRET CODE</th>
+                        <th>Item</th>
+                        <th>Barcode</th>
+                        <th>Quantity</th>
+                        <th>From Shop</th>
+                        <th>To Shop</th>
+                        <th>Initiation Date</th>
+                        <th>Initiation By</th>
+                        <th>Secret Code</th>
                     </tr>
                 </thead>
                 <tbody>
