--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -1378,7 +1378,7 @@
                                     <mat-label>Doctor</mat-label>
                                     <mat-select name="Doctor" [(ngModel)]="BillMaster.Doctor" [disabled]="BillMaster.ID !== null" #Doctorcontrol>
                                         <mat-option [value]="0">No Doctor</mat-option>
-                                        <mat-option *ngFor="let doc of docList let i = index;" [value]="doc.ID">
+                                        <mat-option *ngFor="let doc of doctorList let i = index;" [value]="doc.ID">
                                             {{doc.Name}}
                                         </mat-option>
                                     </mat-select>
@@ -1403,9 +1403,9 @@
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label>Tray No.</mat-label>
                                     <mat-select name="TrayNo" [(ngModel)]="BillMaster.TrayNo" #Typecontrol>
-                                        <!-- <mat-option *ngFor="let Tray of TrayList let i = index;" [value]="Tray.Name">
+                                        <mat-option *ngFor="let Tray of trayNoList let i = index;" [value]="Tray.Name">
                                             {{Tray.Name}}
-                                        </mat-option> -->
+                                        </mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
